unpackaged/main/default/objects/Content_Item__c/Content_Item__c.object-meta.xml
<CustomObject>
    <label>App Item</label>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Content Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>