unpackaged/main/default/objects/Content_Item__c/fields/Available_in_Version__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Version__c</fullName>
    <label>Available in Version</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V001</fullName>
            </value>
            <value>
                <fullName>V002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>