unpackaged/main/default/objects/Content_Item__c/fields/Brainshark_URL__c.field-meta.xml
<CustomField>
    <fullName>Brainshark_URL__c</fullName>
    <formula>Community_Item__r.Brainshark_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brainshark URL</label>
    <type>Text</type>
</CustomField>