unpackaged/main/default/objects/Content_Item__c/fields/Ceterna_Note__c.field-meta.xml
<CustomField>
    <fullName>Ceterna_Note__c</fullName>
    <label>Ceterna Note</label>
    <length>50</length>
    <type>Text</type>
</CustomField>