unpackaged/main/default/objects/Content_Item__c/fields/Community_Item__c.field-meta.xml
<CustomField>
    <fullName>Community_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Item</label>
    <referenceTo>Community_Items__c</referenceTo>
    <relationshipName>Content_Items</relationshipName>
    <type>Lookup</type>
</CustomField>