unpackaged/main/default/objects/Content_Item__c/fields/Community_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_Item_ID__c</fullName>
    <label>Community Item ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>