unpackaged/main/default/objects/Content_Item__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Menu Item</fullName>
            </value>
            <value>
                <fullName>Left Side Copy</fullName>
            </value>
            <value>
                <fullName>Left Side Image</fullName>
            </value>
            <value>
                <fullName>Right Side Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>