unpackaged/main/default/objects/Content_Item__c/fields/Image1__c.field-meta.xml
<CustomField>
    <fullName>Image1__c</fullName>
    <label>Image1/Copy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>