unpackaged/main/default/objects/Content_Item__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <label>Menu Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAOS2018</fullName>
            </value>
            <value>
                <fullName>apps</fullName>
            </value>
            <value>
                <fullName>bio</fullName>
            </value>
            <value>
                <fullName>Bullet Mat &amp; Introducer</fullName>
            </value>
            <value>
                <fullName>case-by-case</fullName>
            </value>
            <value>
                <fullName>Completely absorbed</fullName>
            </value>
            <value>
                <fullName>contact-us</fullName>
            </value>
            <value>
                <fullName>Designed to be</fullName>
            </value>
            <value>
                <fullName>e-learn</fullName>
            </value>
            <value>
                <fullName>faq</fullName>
            </value>
            <value>
                <fullName>faq-1</fullName>
            </value>
            <value>
                <fullName>faq-2</fullName>
            </value>
            <value>
                <fullName>faq-3</fullName>
            </value>
            <value>
                <fullName>faq-4</fullName>
            </value>
            <value>
                <fullName>faq-5</fullName>
            </value>
            <value>
                <fullName>faq-6</fullName>
            </value>
            <value>
                <fullName>faq-7</fullName>
            </value>
            <value>
                <fullName>faq-8</fullName>
            </value>
            <value>
                <fullName>faq-9</fullName>
            </value>
            <value>
                <fullName>faq-10</fullName>
            </value>
            <value>
                <fullName>faq-100</fullName>
            </value>
            <value>
                <fullName>faq-11</fullName>
            </value>
            <value>
                <fullName>faq-12</fullName>
            </value>
            <value>
                <fullName>faq-13</fullName>
            </value>
            <value>
                <fullName>faq-14</fullName>
            </value>
            <value>
                <fullName>faq-15</fullName>
            </value>
            <value>
                <fullName>faq-16</fullName>
            </value>
            <value>
                <fullName>faq-17</fullName>
            </value>
            <value>
                <fullName>faq-18</fullName>
            </value>
            <value>
                <fullName>faq-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>