unpackaged/main/default/objects/Content_Item__c/fields/MigrationID__c.field-meta.xml
<CustomField>
    <fullName>MigrationID__c</fullName>
    <externalId>true</externalId>
    <label>MigrationID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>