unpackaged/main/default/objects/Content_Item__c/fields/Text1__c.field-meta.xml
<CustomField>
    <fullName>Text1__c</fullName>
    <label>Text1</label>
    <type>TextArea</type>
</CustomField>