unpackaged/main/default/objects/Content_Item__c/fields/Text2__c.field-meta.xml
<CustomField>
    <fullName>Text2__c</fullName>
    <label>Text2</label>
    <type>TextArea</type>
</CustomField>