unpackaged/main/default/objects/Content_Item__c/fields/Text3__c.field-meta.xml
<CustomField>
    <fullName>Text3__c</fullName>
    <label>Text3</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>