unpackaged/main/default/objects/Content_Item__c/fields/Use_Text2_As_Menu_Title__c.field-meta.xml
<CustomField>
    <fullName>Use_Text2_As_Menu_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Text2 As Menu Title</label>
    <type>Checkbox</type>
</CustomField>