unpackaged/main/default/objects/Content_Item__c/recordTypes/Copy.recordType-meta.xml
<RecordType>
    <fullName>Copy</fullName>
    <active>true</active>
    <label>Copy</label>
</RecordType>