unpackaged/main/default/objects/Content_Item__c/recordTypes/Image_and_Copy.recordType-meta.xml
<RecordType>
    <fullName>Image_and_Copy</fullName>
    <active>true</active>
    <label>Image and Copy</label>
</RecordType>