unpackaged/main/default/objects/Content_Item__c/recordTypes/Landscape_Image.recordType-meta.xml
<RecordType>
    <fullName>Landscape_Image</fullName>
    <active>true</active>
    <label>Landscape Image</label>
</RecordType>