unpackaged/main/default/objects/Content_Item__c/recordTypes/Menu_List.recordType-meta.xml
<RecordType>
    <fullName>Menu_List</fullName>
    <active>true</active>
    <label>Menu List</label>
</RecordType>