unpackaged/main/default/objects/Content_Item__c/recordTypes/Portrait_Image.recordType-meta.xml
<RecordType>
    <fullName>Portrait_Image</fullName>
    <active>true</active>
    <label>Portrait Image</label>
</RecordType>