unpackaged/main/default/objects/Content_Item__c/recordTypes/Twin_Images.recordType-meta.xml
<RecordType>
    <fullName>Twin_Images</fullName>
    <active>true</active>
    <label>Twin Images</label>
</RecordType>