unpackaged/main/default/objects/Content_Item__c/listViews/AAOS2018.listView-meta.xml
<ListView>
    <fullName>AAOS2018</fullName>
    <columns>NAME</columns>
    <columns>Community_Item__c</columns>
    <columns>Available_in_Version__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Menu_Item__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>equals</operation>
        <value>AAOS2018</value>
    </filters>
    <label>AAOS2018</label>
</ListView>