unpackaged/main/default/objects/Content_Item__c/listViews/Applications_Genex.listView-meta.xml
<ListView>
    <fullName>Applications_Genex</fullName>
    <columns>NAME</columns>
    <columns>Menu_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Community_Item__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Available_in_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>contains</operation>
        <value>genex-apps</value>
    </filters>
    <filters>
        <field>Menu_Item__c</field>
        <operation>contains</operation>
        <value>genex</value>
    </filters>
    <label>Applications Genex</label>
</ListView>