unpackaged/main/default/objects/Content_Item__c/listViews/Biocomposites.listView-meta.xml
<ListView>
    <fullName>Biocomposites</fullName>
    <columns>NAME</columns>
    <columns>Menu_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Community_Item__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>equals</operation>
        <value>bio</value>
    </filters>
    <label>Biocomposites</label>
</ListView>