unpackaged/main/default/objects/Content_Item__c/listViews/Bullet_Mat_Introducer.listView-meta.xml
<ListView>
    <fullName>Bullet_Mat_Introducer</fullName>
    <columns>NAME</columns>
    <columns>Menu_Item__c</columns>
    <columns>Community_Item__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Order__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>contains</operation>
        <value>Bullet Mat</value>
    </filters>
    <label>Bullet Mat &amp; Introducer</label>
</ListView>