unpackaged/main/default/objects/Content_Item__c/listViews/FAQ.listView-meta.xml
<ListView>
    <fullName>FAQ</fullName>
    <columns>NAME</columns>
    <columns>Community_Item__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Menu_Item__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Image1__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>contains</operation>
        <value>faq</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Content_Item__c.Menu_List</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>FAQ</label>
</ListView>