unpackaged/main/default/objects/Content_Item__c/listViews/Hip.listView-meta.xml
<ListView>
    <fullName>Hip</fullName>
    <columns>NAME</columns>
    <columns>Menu_Item__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Display_Type__c</columns>
    <columns>Sub_Menu_Item__c</columns>
    <columns>Order__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Menu_Item__c</field>
        <operation>contains</operation>
        <value>hip</value>
    </filters>
    <label>Hip</label>
</ListView>